--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>5.3</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.12.2</version>
         </dependency>
 
     </dependencies>
@@ -59,6 +59,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>order_parser</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
